Zweite Version: JV 14 entfernt

--- a/sammlung.md.html
+++ b/sammlung.md.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="de">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Style-Type" content="text/css" />
@@ -20,104 +20,6 @@
 <div id="header">
 <h1 class="title">Jugend- und Familiensoziologie II</h1>
 <h2 class="author">Martin Freidank</h2>
-</div>
-<div id="TOC">
-<ul>
-<li><a href="#jv-9.2----risikoverhalten">JV 9.2 -- Risikoverhalten</a><ul>
-<li><a href="#psychologischer-erklärungsansatz">Psychologischer Erklärungsansatz</a><ul>
-<li><a href="#kognitionspsychologischer-ansatz">Kognitionspsychologischer Ansatz</a></li>
-<li><a href="#emotionspsychologischer-ansatz">Emotionspsychologischer Ansatz</a></li>
-<li><a href="#neuropsychologischer-ansatz">Neuropsychologischer Ansatz</a></li>
-<li><a href="#persönlichkeitspsychologische-perspektive">Persönlichkeitspsychologische Perspektive</a></li>
-</ul></li>
-<li><a href="#sozialwissenschaftliche-erklärungsansätze-nur-einen-lernen">Sozialwissenschaftliche Erklärungsansätze (nur einen lernen)</a><ul>
-<li><a href="#sozialpsychologische-perspektive">Sozialpsychologische Perspektive</a></li>
-</ul></li>
-<li><a href="#integrative-erkärungsansätze-nur-einen-lernen">Integrative Erkärungsansätze (nur einen lernen)</a><ul>
-<li><a href="#theorie-des-jugendlichen-leichtsinns">Theorie des jugendlichen Leichtsinns</a></li>
-</ul></li>
-</ul></li>
-<li><a href="#jv-10.2----armut">JV 10.2 -- Armut</a><ul>
-<li><a href="#intergenerativer-armutstransfer">intergenerativer Armutstransfer</a></li>
-<li><a href="#einkommensmobilität">Einkommensmobilität</a></li>
-<li><a href="#ökonomischer-wandel-familie-und-persönlichkeit-theorie-des-lebensverlaufs">Ökonomischer Wandel, Familie und Persönlichkeit: &quot;Theorie des Lebensverlaufs&quot;</a><ul>
-<li><a href="#entwicklung-der-theorie">Entwicklung der Theorie</a></li>
-<li><a href="#vergleichsstudie-von-elder">Vergleichsstudie von Elder</a></li>
-<li><a href="#modell">Modell</a></li>
-</ul></li>
-</ul></li>
-<li><a href="#jv-12.1----jugend-und-partizipation">JV 12.1 -- Jugend und Partizipation</a><ul>
-<li><a href="#begriffe">Begriffe</a></li>
-<li><a href="#nutzen-von-partizipativen-handlungsspielräumen-in-bildungseinrichtungen">Nutzen von partizipativen Handlungsspielräumen in Bildungseinrichtungen</a></li>
-<li><a href="#funktion-von-partizipation">Funktion von Partizipation</a></li>
-<li><a href="#formen-konsultativer-einflussnahme-von-heranwachsenden">Formen konsultativer Einflussnahme von Heranwachsenden</a></li>
-</ul></li>
-<li><a href="#jv-13.1----werte">JV 13.1 -- Werte</a><ul>
-<li><a href="#definition-und-funktion">Definition und Funktion</a></li>
-<li><a href="#wertewandel-vs.-wertesynthese">Wertewandel vs. Wertesynthese</a><ul>
-<li><a href="#wertewandel-nach-inglehart">Wertewandel nach Inglehart</a></li>
-<li><a href="#wertesynthese-nach-klage">Wertesynthese nach Klage</a></li>
-</ul></li>
-<li><a href="#beispiele-für-wertorientierungen">Beispiele für Wertorientierungen:</a></li>
-</ul></li>
-<li><a href="#jv-14.1----zukunftserwartungen">JV 14.1 -- Zukunftserwartungen</a><ul>
-<li><a href="#definition">Definition</a></li>
-<li><a href="#zukunftserwartungen-und-persönlichkeit">Zukunftserwartungen und Persönlichkeit</a></li>
-<li><a href="#heimatverbundenheit">Heimatverbundenheit</a><ul>
-<li><a href="#einflussfaktoren-für-heimatverbundenheit">Einflussfaktoren für Heimatverbundenheit</a></li>
-</ul></li>
-<li><a href="#migrationsverhalten-von-ostdeutschen-frauen">Migrationsverhalten von ostdeutschen Frauen</a></li>
-<li><a href="#erfolgreiche-regionalpolitik">Erfolgreiche Regionalpolitik</a></li>
-</ul></li>
-<li><a href="#fv-8.2----kinderwunsch">FV 8.2 -- Kinderwunsch</a><ul>
-<li><a href="#grundlagen-rational-choice">Grundlagen Rational Choice</a></li>
-<li><a href="#rational-choice-und-kinderwunsch">Rational Choice und Kinderwunsch</a><ul>
-<li><a href="#kinder-als-finanzielle-belastung">Kinder als finanzielle Belastung</a></li>
-</ul></li>
-<li><a href="#aufwachsen-und-wandel-der-eltern-kind-beziehung">Aufwachsen und Wandel der Eltern-Kind-Beziehung</a><ul>
-<li><a href="#veränderung-der-elternrolle">Veränderung der Elternrolle</a></li>
-<li><a href="#liberalisierungstendenzen">Liberalisierungstendenzen</a></li>
-</ul></li>
-</ul></li>
-<li><a href="#fv-10.2----väter">FV 10.2 -- Väter</a><ul>
-<li><a href="#phasen-in-der-entwicklung-der-vaterforschung-nach-fthenakis">Phasen in der Entwicklung der Vaterforschung nach Fthenakis</a></li>
-<li><a href="#sechs-offene-forschungsfragen">Sechs offene Forschungsfragen</a></li>
-<li><a href="#väterliches-engagement">Väterliches Engagement</a><ul>
-<li><a href="#forschungsergebnisse">Forschungsergebnisse</a></li>
-<li><a href="#theorieansätze">Theorieansätze</a></li>
-</ul></li>
-</ul></li>
-<li><a href="#fv-11.1----großeltern">FV 11.1 -- Großeltern</a><ul>
-<li><a href="#rolle-und-funktion">Rolle und Funktion</a></li>
-<li><a href="#historischer-wandel-von-großelternschaft">Historischer Wandel von Großelternschaft</a></li>
-<li><a href="#zukunftstrends">Zukunftstrends</a></li>
-<li><a href="#verändertes-rollenverständnis">verändertes Rollenverständnis</a></li>
-<li><a href="#intergenerativer-leistungstransfer">intergenerativer Leistungstransfer</a><ul>
-<li><a href="#kontextfaktoren">Kontextfaktoren</a></li>
-</ul></li>
-</ul></li>
-<li><a href="#fv-11.2----lebenssituation-der-großeltern">FV 11.2 -- Lebenssituation der Großeltern</a><ul>
-<li><a href="#lebenssituation">Lebenssituation</a></li>
-<li><a href="#generationenkonflikt-nach-mannheim">Generationenkonflikt nach Mannheim</a></li>
-<li><a href="#generationenvertrag">Generationenvertrag</a><ul>
-<li><a href="#kontextfaktoren-1">Kontextfaktoren</a></li>
-<li><a href="#belastungen">Belastungen</a></li>
-</ul></li>
-</ul></li>
-<li><a href="#fv-12.1----jugendhilfe">FV 12.1 -- Jugendhilfe</a><ul>
-<li><a href="#geschichte">Geschichte</a><ul>
-<li><a href="#mittelalter">Mittelalter</a></li>
-<li><a href="#konzeption-von-franckehallesche-anstalten">Konzeption von Francke/Halle'sche Anstalten</a></li>
-<li><a href="#jahrhundert">18. Jahrhundert</a></li>
-<li><a href="#jahrhundert-1">19. Jahrhundert</a></li>
-<li><a href="#jahrhundert-2">20. Jahrhundert</a></li>
-</ul></li>
-<li><a href="#sozialberichterstattung">Sozialberichterstattung</a><ul>
-<li><a href="#kinder--und-jugendbericht">Kinder- und Jugendbericht</a></li>
-<li><a href="#familienbericht">Familienbericht</a></li>
-</ul></li>
-</ul></li>
-</ul>
 </div>
 <h1 id="jv-9.2----risikoverhalten">JV 9.2 -- Risikoverhalten</h1>
 <blockquote>
@@ -376,7 +278,7 @@
 </ul>
 <h4 id="lebenszyklus-hypothese">Lebenszyklus-Hypothese</h4>
 <ul>
-<li>Veränderungen individueller Wertorientierungen durch Anspassung an lebensphasenspezifische Rollenanforderungen möglich</li>
+<li>Veränderungen individueller Wertorientierungen durch Anpassung an lebensphasenspezifische Rollenanforderungen möglich</li>
 </ul>
 <h4 id="methodik-1">Methodik:</h4>
 <ul>
@@ -395,79 +297,6 @@
 <li>Soziale Bedürfnisse: Partnerschaft, Kommunikation, Freunde</li>
 <li>Individualbedürfnisse: Status, Macht, Karriere</li>
 </ul></li>
-</ul>
-<h1 id="jv-14.1----zukunftserwartungen">JV 14.1 -- Zukunftserwartungen</h1>
-<blockquote>
-<p><em>Erläutern Sie, was &quot;Zukunftserwartungen&quot; sind, wozu sie dienen und in welchem Zusammenhang sie zu Persönlichkeitsmerkmalen wie Selbstwirksamkeits- und Kontrollüberzeugungen stehen! Was versteht man unter &quot;Heimatverbundenheit&quot; und welche Faktoren beeinflussen die Heimatverbundenheit bzw. die Zufriedenheit mit dem Heimatort bei Jugendlichen nachweislich (vier Beispiele)? Beschreiben Sie das Migrationsverhalten von (ostdeutschen) Frauen einschließlich ihrer Beweggründe für Migration! Nennen Sie Schlussfolgerungen für eine erfolgreiche Regionalpolitik!</em></p>
-</blockquote>
-<h2 id="definition">Definition</h2>
-<p>psychische Repräsentationen über zukünftige Lebensereignisse</p>
-<ul>
-<li>positiv: Wünsche, Hoffnungen</li>
-<li>negativ: Befürchtungen, Ängste</li>
-</ul>
-<p>Fusion: Orientierungs- und Strukturieungshilfe für die Lebenshilfe</p>
-<h2 id="zukunftserwartungen-und-persönlichkeit">Zukunftserwartungen und Persönlichkeit</h2>
-<ul>
-<li>verschiedene Planungs- und Verhaltensrelevanz individueller und gesellschaftlicher Zukunftserwartungen → unterschiedlicher Zusammenhang zum Selbstwirksamkeitserleben</li>
-<li>Überschätzung eigener Handlungsfähigkeit motiviert und ist selbstwertstabilisierend, -erhöhend</li>
-<li>Kontrollüberzeugungen: Erwartungen, inwieweit das egeiene Handeln und seine Folgen dem eigenen Einfluss zugänglich sind
-<ul>
-<li>External: fremde Mächte (Gott)</li>
-<li>Internal: eigenen Glückes Schmied</li>
-</ul></li>
-<li>internale Kontrollüberzeugung hat direkten Einfluss auf Zukunftserwartungen (internal → Optimismus, external → Blockade positiver Zukunftserwartung)</li>
-</ul>
-<h2 id="heimatverbundenheit">Heimatverbundenheit</h2>
-<p>emotionale Identifikation mit einer vertrauten Region</p>
-<ul>
-<li>soziale Zugehörigkeit</li>
-<li>Geborgenheit</li>
-<li>Interesse am kommunalen Geschehen</li>
-<li>Verpflichtung</li>
-</ul>
-<h3 id="einflussfaktoren-für-heimatverbundenheit">Einflussfaktoren für Heimatverbundenheit</h3>
-<ul>
-<li>Soziodemografische Angaben (Alter, Geschlecht, Wohnort)</li>
-<li>Lebensziele (Familienorientierung, Beruf)</li>
-<li>Soziale Netzwerke (Freundschaften, Vereine)</li>
-<li>Ressourcen der Kommune (Bevölkerung, Arbeitsmarkt)</li>
-</ul>
-<h2 id="migrationsverhalten-von-ostdeutschen-frauen">Migrationsverhalten von ostdeutschen Frauen</h2>
-<ul>
-<li>Gründe
-<ul>
-<li>Partnermarkt (am Häufigsten)</li>
-<li>Bildung: Aussicht auf Qualifizierung</li>
-<li>Soziale Netzwerke</li>
-</ul></li>
-<li>Mütter mit Kindern weniger mobil - mehr Wanderung von kinderlosen Frauen</li>
-<li>Exogene Faktoren
-<ul>
-<li>Arbeitsplatzangebot</li>
-<li>Lebensbedingungen</li>
-<li>Image der Region</li>
-<li>sozio-ökonomischer Status</li>
-</ul></li>
-<li>Indogene Faktoren
-<ul>
-<li>Qualifikation</li>
-<li>Berufsorientierung</li>
-<li>Motivation -Familienorientierung</li>
-</ul></li>
-<li>erleichternde Faktoren
-<ul>
-<li>Migrationsnetzwerke</li>
-<li>Mobilitätsbeihilfen</li>
-<li>Beispiele von Freunden, Verwandten</li>
-</ul></li>
-</ul>
-<h2 id="erfolgreiche-regionalpolitik">Erfolgreiche Regionalpolitik</h2>
-<ul>
-<li>Berücksichtigung von Frauen als wichtiger Migrantengruppe und Doppelorientierung von Familie und Beruf</li>
-<li>Investition in wirtschaftliche Leistungsfähigkeit, Stärkung der Rahmenbedingungen, Stärkung der Familie, Nachbarschaft, Kultur, Lebensqualität</li>
-<li>Arbeitsmarkt, der Vereinbarkeit von Beruf und Familie ermöglichst</li>
-<li>Attraktive Studien- und Ausbildungsangebote</li>
 </ul>
 <h1 id="fv-8.2----kinderwunsch">FV 8.2 -- Kinderwunsch</h1>
 <blockquote>
@@ -598,7 +427,7 @@
 <li>Entwicklung der Familie → veränderte Anforderungen und Beziehungsmuster</li>
 <li>Erklärung für unterschiedliche väterliche Partizipation in bestimmten Phasen der Familienentwicklung</li>
 </ul>
-<h1 id="fv-11.1----großeltern">FV 11.1 -- Großeltern</h1>
+<h1 id="fv-11.1----großeltern-wichtig">FV 11.1 -- Großeltern (wichtig)</h1>
 <blockquote>
 <p><em>Welche Rolle spielen Großeltern bzw. welche Funktionen erfüllen sie? Gehen Sie auf den historischen Wandel der Bedingungen für Großelternschaft, auf Zukunftstrends und auf das veränderte Rollenverständnis von Großeltern ein! Skizzieren Sie kurz die Formen des intergenerativen Leistungstransfers zwischen Großeltern und Enkeln und beschreiben Sie die Kontextfaktoren, die auf seine Realisierung einwirken!</em></p>
 </blockquote>
@@ -655,7 +484,7 @@
 <li>staatliche Transferleistungen</li>
 <li>Familiäre Ereignisse und familienzyklische Phasen</li>
 </ul>
-<h1 id="fv-11.2----lebenssituation-der-großeltern">FV 11.2 -- Lebenssituation der Großeltern</h1>
+<h1 id="fv-11.2----lebenssituation-der-großeltern-wichtig">FV 11.2 -- Lebenssituation der Großeltern (wichtig)</h1>
 <blockquote>
 <p><em>Beschreiben Sie kurz die Lebenssituation der Großelterngeneration (z.B. Einkommens- und Wohnsituation, Lebenszufriedenheit). Erläutern Sie die (soziologische) Herkunft und den Inhalt der Begriffe &quot;Generation&quot;, &quot;Generationenkonflikt&quot; und &quot;Generationenvertrag&quot;! Welche Einflussfaktoren beeinflussen die intergenerativen Transfers? Wodurch wird der Fortbestand des Generationenvertrags belastet?</em></p>
 </blockquote>
@@ -695,7 +524,7 @@
 <li>Pflegenotstand: Defizite der Pflegeversicherung, unzureichende Renten</li>
 <li>Debatte &quot;Generationengerechtigkeit&quot;: Vorwurf, ältere Generationen würden unfairerweise auf Kosten der Jüngeren profitieren</li>
 </ul>
-<h1 id="fv-12.1----jugendhilfe">FV 12.1 -- Jugendhilfe</h1>
+<h1 id="fv-12.1----jugendhilfe-unwichtig">FV 12.1 -- Jugendhilfe (unwichtig?)</h1>
 <blockquote>
 <p><em>Skizzieren Sie die Entstehung des Jugendhilfesystems vom Mittelalter bis zum Reichsjugendwohlfahrtsgesetz (1922) und gehen Sie dabei auf markante Meilensteine zur Linderung des Elends und der Bildungsnot von Kindern und Jugendlichen ein! Beschreiben Sie kurz, in welchem Turnus und vom wem die „Kinder- und Jugendberichte“ sowie die „Familienberichte“ der Bundesregierung erarbeitet werden und welche Funktion sie haben!</em></p>
 </blockquote>
@@ -795,7 +624,7 @@
 <ul>
 <li>Schutz von Pflegekindern, Amtsvormundschaft</li>
 <li>Fürsorgeerziehung (Eingriff in elterliche Gewalt)</li>
-<li>Jugendpflege und Fürsorge für Säuglinge und KLeinkinder</li>
+<li>Jugendpflege und Fürsorge für Säuglinge und Kleinkinder</li>
 </ul></li>
 </ul>
 <h2 id="sozialberichterstattung">Sozialberichterstattung</h2>
@@ -804,7 +633,7 @@
 <ul>
 <li>jede Legislaturperiode</li>
 <li>Bestandsaufnahme, Analyse, Vorschläge zur Weiterentwicklung der Jugendhilfe</li>
-<li>jeder dritte Berciht: Überblick über Gesamtsituation der Jugendhilfe</li>
+<li>jeder dritte Bericht: Überblick über Gesamtsituation der Jugendhilfe</li>
 </ul>
 <h3 id="familienbericht">Familienbericht</h3>
 <ul>
