Inhaltsverzeichnis wieder hinzugefügt

--- a/sammlung.md.html
+++ b/sammlung.md.html
@@ -21,6 +21,95 @@
 <h1 class="title">Jugend- und Familiensoziologie II</h1>
 <h2 class="author">Martin Freidank</h2>
 </div>
+<div id="TOC">
+<ul>
+<li><a href="#jv-9.2----risikoverhalten">JV 9.2 -- Risikoverhalten</a><ul>
+<li><a href="#psychologischer-erklärungsansatz">Psychologischer Erklärungsansatz</a><ul>
+<li><a href="#kognitionspsychologischer-ansatz">Kognitionspsychologischer Ansatz</a></li>
+<li><a href="#emotionspsychologischer-ansatz">Emotionspsychologischer Ansatz</a></li>
+<li><a href="#neuropsychologischer-ansatz">Neuropsychologischer Ansatz</a></li>
+<li><a href="#persönlichkeitspsychologische-perspektive">Persönlichkeitspsychologische Perspektive</a></li>
+</ul></li>
+<li><a href="#sozialwissenschaftliche-erklärungsansätze-nur-einen-lernen">Sozialwissenschaftliche Erklärungsansätze (nur einen lernen)</a><ul>
+<li><a href="#sozialpsychologische-perspektive">Sozialpsychologische Perspektive</a></li>
+</ul></li>
+<li><a href="#integrative-erkärungsansätze-nur-einen-lernen">Integrative Erkärungsansätze (nur einen lernen)</a><ul>
+<li><a href="#theorie-des-jugendlichen-leichtsinns">Theorie des jugendlichen Leichtsinns</a></li>
+</ul></li>
+</ul></li>
+<li><a href="#jv-10.2----armut">JV 10.2 -- Armut</a><ul>
+<li><a href="#intergenerativer-armutstransfer">intergenerativer Armutstransfer</a></li>
+<li><a href="#einkommensmobilität">Einkommensmobilität</a></li>
+<li><a href="#ökonomischer-wandel-familie-und-persönlichkeit-theorie-des-lebensverlaufs">Ökonomischer Wandel, Familie und Persönlichkeit: &quot;Theorie des Lebensverlaufs&quot;</a><ul>
+<li><a href="#entwicklung-der-theorie">Entwicklung der Theorie</a></li>
+<li><a href="#vergleichsstudie-von-elder">Vergleichsstudie von Elder</a></li>
+<li><a href="#modell">Modell</a></li>
+</ul></li>
+</ul></li>
+<li><a href="#jv-12.1----jugend-und-partizipation">JV 12.1 -- Jugend und Partizipation</a><ul>
+<li><a href="#begriffe">Begriffe</a></li>
+<li><a href="#nutzen-von-partizipativen-handlungsspielräumen-in-bildungseinrichtungen">Nutzen von partizipativen Handlungsspielräumen in Bildungseinrichtungen</a></li>
+<li><a href="#funktion-von-partizipation">Funktion von Partizipation</a></li>
+<li><a href="#formen-konsultativer-einflussnahme-von-heranwachsenden">Formen konsultativer Einflussnahme von Heranwachsenden</a></li>
+</ul></li>
+<li><a href="#jv-13.1----werte">JV 13.1 -- Werte</a><ul>
+<li><a href="#definition-und-funktion">Definition und Funktion</a></li>
+<li><a href="#wertewandel-vs.-wertesynthese">Wertewandel vs. Wertesynthese</a><ul>
+<li><a href="#wertewandel-nach-inglehart">Wertewandel nach Inglehart</a></li>
+<li><a href="#wertesynthese-nach-klage">Wertesynthese nach Klage</a></li>
+</ul></li>
+<li><a href="#beispiele-für-wertorientierungen">Beispiele für Wertorientierungen:</a></li>
+</ul></li>
+<li><a href="#fv-8.2----kinderwunsch">FV 8.2 -- Kinderwunsch</a><ul>
+<li><a href="#grundlagen-rational-choice">Grundlagen Rational Choice</a></li>
+<li><a href="#rational-choice-und-kinderwunsch">Rational Choice und Kinderwunsch</a><ul>
+<li><a href="#kinder-als-finanzielle-belastung">Kinder als finanzielle Belastung</a></li>
+</ul></li>
+<li><a href="#aufwachsen-und-wandel-der-eltern-kind-beziehung">Aufwachsen und Wandel der Eltern-Kind-Beziehung</a><ul>
+<li><a href="#veränderung-der-elternrolle">Veränderung der Elternrolle</a></li>
+<li><a href="#liberalisierungstendenzen">Liberalisierungstendenzen</a></li>
+</ul></li>
+</ul></li>
+<li><a href="#fv-10.2----väter">FV 10.2 -- Väter</a><ul>
+<li><a href="#phasen-in-der-entwicklung-der-vaterforschung-nach-fthenakis">Phasen in der Entwicklung der Vaterforschung nach Fthenakis</a></li>
+<li><a href="#sechs-offene-forschungsfragen">Sechs offene Forschungsfragen</a></li>
+<li><a href="#väterliches-engagement">Väterliches Engagement</a><ul>
+<li><a href="#forschungsergebnisse">Forschungsergebnisse</a></li>
+<li><a href="#theorieansätze">Theorieansätze</a></li>
+</ul></li>
+</ul></li>
+<li><a href="#fv-11.1----großeltern-wichtig">FV 11.1 -- Großeltern (wichtig)</a><ul>
+<li><a href="#rolle-und-funktion">Rolle und Funktion</a></li>
+<li><a href="#historischer-wandel-von-großelternschaft">Historischer Wandel von Großelternschaft</a></li>
+<li><a href="#zukunftstrends">Zukunftstrends</a></li>
+<li><a href="#verändertes-rollenverständnis">verändertes Rollenverständnis</a></li>
+<li><a href="#intergenerativer-leistungstransfer">intergenerativer Leistungstransfer</a><ul>
+<li><a href="#kontextfaktoren">Kontextfaktoren</a></li>
+</ul></li>
+</ul></li>
+<li><a href="#fv-11.2----lebenssituation-der-großeltern-wichtig">FV 11.2 -- Lebenssituation der Großeltern (wichtig)</a><ul>
+<li><a href="#lebenssituation">Lebenssituation</a></li>
+<li><a href="#generationenkonflikt-nach-mannheim">Generationenkonflikt nach Mannheim</a></li>
+<li><a href="#generationenvertrag">Generationenvertrag</a><ul>
+<li><a href="#kontextfaktoren-1">Kontextfaktoren</a></li>
+<li><a href="#belastungen">Belastungen</a></li>
+</ul></li>
+</ul></li>
+<li><a href="#fv-12.1----jugendhilfe-unwichtig">FV 12.1 -- Jugendhilfe (unwichtig?)</a><ul>
+<li><a href="#geschichte">Geschichte</a><ul>
+<li><a href="#mittelalter">Mittelalter</a></li>
+<li><a href="#konzeption-von-franckehallesche-anstalten">Konzeption von Francke/Halle'sche Anstalten</a></li>
+<li><a href="#jahrhundert">18. Jahrhundert</a></li>
+<li><a href="#jahrhundert-1">19. Jahrhundert</a></li>
+<li><a href="#jahrhundert-2">20. Jahrhundert</a></li>
+</ul></li>
+<li><a href="#sozialberichterstattung">Sozialberichterstattung</a><ul>
+<li><a href="#kinder--und-jugendbericht">Kinder- und Jugendbericht</a></li>
+<li><a href="#familienbericht">Familienbericht</a></li>
+</ul></li>
+</ul></li>
+</ul>
+</div>
 <h1 id="jv-9.2----risikoverhalten">JV 9.2 -- Risikoverhalten</h1>
 <blockquote>
 <p><em>Erklären Sie jugendtypische Geschwindigkeitsübertretungen im motorisierten Straßenverkehr aus der Perspektive kognitions-, emotions- und neuropsychologischer Ansätze und erläutern Sie, inwieweit diese Ansätze jeweils empirisch gesichert sind. Stellen Sie jeweils einen sozialwissenschaftlichen und einen integrativen Ansatz zur Erklärung von Risikoverhalten vor und benennen Sie seinen Inhalt bzw. seine Besonderheiten!</em></p>
